# api-template

./: .gitignore  Cargo.toml
api/: Cargo.toml  Makefile.toml
api-models/: Cargo.toml
api-models/docker/testing/: Dockerfile
api-models/migrations/: 20210316183859_init.sql  20210320080926_event.sql  20210320182204_voicemodel.sql
api-models/src/: events.rs  guild.rs  lib.rs
api/docker/testing/: docker-compose.yml
api/src/: error.rs  lib.rs
api/src/backend/: session.rs
api/src/controller/: mod.rs
api/src/controller/oauth2/: auth.rs  login.rs  logout.rs
api/src/controller/user/: me.rs
api/src/data/: credential.rs  http.rs  mod.rs  oauth_client.rs
api/src/model/: guild.rs  mod.rs
bot/: .gitignore  Cargo.toml
bot/locales/en-US/: main.ftl
bot/locales/ja-JP/: main.ftl
bot/src/: data.rs  lib.rs  macros.rs  main.rs  schema.rs
bot/src/commands/: mod.rs
bot/src/commands/meta/: down.rs  invite.rs  mod.rs  ping.rs
bot/src/commands/slash/: help.rs  lang.rs  mod.rs  operations.rs  set_voice.rs
bot/src/commands/ttscommand/: join.rs  leave.rs  mod.rs
bot/src/common/: i18n.rs  mod.rs  redis.rs  slash.rs  tts.rs
bot/src/handler/: client.rs  mod.rs
bot/src/tasks/: mod.rs  token_renewer.rs
crates/enum-product-macro/: Cargo.toml
crates/enum-product-macro/src/: lib.rs
crates/sqlx-helper/: Cargo.toml
crates/sqlx-helper/src/: lib.rs
crates/tts/: .gitignore  Cargo.toml  Makefile.toml  req.json
crates/tts/src/: error.rs  lib.rs
crates/tts/src/backend/: gcp.rs  mod.rs  openjtalk.rs
stripe-server/: package.json  tsconfig.json
stripe-server/src/: index.ts
web/: nuxt.config.js  package.json  tsconfig.json
web/components/: AppHeader.vue  Payment.vue
web/models/: payment.ts
web/pages/dashboard/: index.vue
web/pages/payment/: canceled.vue  plans.vue  success.vue
