[package]
name = "api-models"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
derive_builder = "0.9.0"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
tokio = "0.2"
actix-rt = "1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "chrono",
]

[dependencies.sqlx-helper]
path = "../crates/sqlx-helper"
