[package]
name = "bot"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "create_slash"
path = "src/bin/create_slash.rs"

[[bin]]
name = "delete_slash"
path = "src/bin/delete_slash.rs"

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.3.0", features = ["full"] }
dotenv = "0.15"
songbird = "0.1"
urlencoding = "1"
lazy_static = "1.4"
structopt = "0.3"
anyhow = "1.0"
fluent-templates = "0.5"
unic-langid = "0.9"

[dependencies.serenity]
version = "0.10.4"
features = [
    "http",
    "builder",
    "collector",
    "cache",
    "client",
    "framework",
    "gateway",
    "model",
    "client",
    "voice",
    "gateway",
    "rustls_backend",
    "unstable_discord_api",
]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
]
