[package]
name = "bot"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "create_slash"
path = "src/bin/create_slash.rs"

[[bin]]
name = "delete_slash"
path = "src/bin/delete_slash.rs"

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version = "0.2", features = ["full"] }
redis = { version = "0.17", features = ["aio"] }
dotenv = "0.15"
urlencoding = "1"
lazy_static = "1.4"
structopt = "0.3"
anyhow = "1.0"
fluent-templates = "0.6"
unic-langid = "0.9"

[dependencies.songbird]
version = "0.1"
default-features = false
features = [
    "serenity-rustls-tokio-02",
    "driver-tokio-02",
    "gateway-tokio-02",
    "builtin-queue",
]

[dependencies.serenity]
version = "0.10"
default-features = false
features = [
    "rustls_tokio_0_2_backend",
    "http",
    "builder",
    "collector",
    "cache",
    "client",
    "framework",
    "standard_framework",
    "model",
    "voice",
    "gateway",
    "unstable_discord_api",
]

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "chrono",
]

[dependencies.api-models]
path = "../api-models"

[dependencies.tts]
path = "../crates/tts"

