[package]
name = "sqlx-helper"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
proc-macro-error = "0.4.12"
proc-macro2 = "1.0.24"
quote = "1.0.9"
darling = "0.12"
chrono = "0.4"

[dependencies.syn]
version = "1.0.64"
features = ["full", "extra-traits"]

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [
    "macros",
    "postgres",
    "chrono",
    "runtime-tokio",
]