[package]
name = "tts"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tempfile = "3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
enum-product = { path = "../enum-product-macro" }
base64 = "0.13"

[dependencies.reqwest]
features = ["json", "gzip"]
optional = true
version = "0.11"

[dependencies.reqwest_compat]
features = ["json", "gzip"]
optional = true
package = "reqwest"
version = "0.10"

[features]
default = ["tokio_02"]

tokio_10 = ["reqwest"]
tokio_02 = ["reqwest_compat"]

[dev-dependencies]
dotenv = "0.15"

[dev-dependencies.tokio]
features = ["macros", "rt"]
package = "tokio"
version = "1.3"


[dev-dependencies.tokio_compat]
features = ["macros", "rt-core"]
package = "tokio"
version = "0.2"
